<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"/>
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/baseline_notifications_24"
        android:title="@string/notification"/>
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/baseline_add_circle_outline_24"
        android:title="@string/add"/>
    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search"/>
    <item
        android:id="@+id/page_5"
        android:enabled="true"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile"/>
</menu>